ingress-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: todo.tsubekti.my.id
    http:
      paths:
      - backend:
          service:
            name: todo-app-be
            port:
              number: 4000
        path: /api/
        pathType: Prefix
      - backend:
          service:
            name: todo-app-fe
            port:
              number: 3000
        path: /
        pathType: Prefix
